src/template/infrastructure/k8s/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-worker
  labels:
    app: template-worker
spec:
  selector:
    matchLabels:
      app: template-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: template-worker
    spec:
      containers:
        - name: template-worker
          image: genocsacr.azurecr.io/templateworker:1.0.0
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 1024Mi
