src/template/infrastructure/k8s/deployment-webapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-webapi
  labels:
    app: template-webapi
spec:
  selector:
    matchLabels:
      app: template-webapi
  replicas: 1
  template:
    metadata:
      labels:
        app: template-webapi
    spec:
      containers:
        - name: template-webapi
          image: genocs/templatewebapi:1.0.0
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 1024Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: template-webapi
spec:
  # type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: template-webapi
