src/template/infrastructure/k8s/ssl-termination_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-infra
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
  namespace: test-infra
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: echo
  sessionAffinity: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
  name: echo
  namespace: test-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - image: gcr.io/k8s-staging-ingressconformance/echoserver:v20220815-e21d1a4
          name: echo
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "10"]
          ports:
            - containerPort: 3000
